there was an extra " > " in section-1

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1 class="section-heading">Variety of our Menu</h1>
         <div class="section-1-icons">
           <i class="fas fa-coffee change"></i>
-          <i class="fas fa-hotdog"></i>>
+          <i class="fas fa-hotdog"></i>
           <i class="fas fa-cookie-bite"></i>
           <i class="fas fa-glass-whiskey"></i>
         </div>
